--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ceramicnetwork/key-did-resolver": "^0.2.2",
+    "@stablelib/random": "^1.0.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "dids": "^3.1.0",
+    "ipfs-core": "^0.14.3",
+    "key-did-provider-ed25519": "^2.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "util": "^0.12.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
