--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@3id/did-provider": "^0.4.1",
+    "@ceramicnetwork/3id-did-resolver": "^2.0.4",
+    "@ceramicnetwork/http-client": "^2.0.4",
     "@ceramicnetwork/key-did-resolver": "^0.2.2",
     "@stablelib/random": "^1.0.1",
     "@testing-library/jest-dom": "^5.16.4",
@@ -10,7 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "dids": "^3.1.0",
     "ipfs-core": "^0.14.3",
-    "key-did-provider-ed25519": "^2.0.0",
+    "key-did-resolver": "^2.0.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
